6-ФЗ. 1я итерация